Updated portfolio projects

--- a/views/index.html
+++ b/views/index.html
@@ -102,8 +102,8 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="icofont-document-folder"></i>
-                    <span data-toggle="counter-up">14</span>
-                    <p><strong>Repositories</strong> on GitHub with ongoing and finished projects, with <strong>8</strong> of them being public.</p>
+                    <span data-toggle="counter-up">15</span>
+                    <p><strong>Repositories</strong> on GitHub with ongoing and finished projects, with <strong>9</strong> of them being public.</p>
                   </div>
                 </div>
 
@@ -472,7 +472,7 @@
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal6">
               <img src="../public/img/portfolio/portfolio-6.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>BattleBoss VR</h4>
+                <h4>BatlBoss VR</h4>
                 <p>Fourth semester VR project made for Oculus Rift</p>
               </div>
             </div>
@@ -797,12 +797,15 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">BattleBoss for VR</h2><br/>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">BatlBoss for VR</h2><br/>
 
                                 <!-- Portfolio Modal - Image-->
                                 <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-6.png" alt="" />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-5">My fourth semester project and first VR related project was Battleboss aimed for Oculus Rift. It used SteamVR libraries and was created in Unity. In this project, the user could attack the boss by lighting him on fire, whacking him with a sword, or shooting arrows from a distance.</p>
+                                <p class="mb-5">
+                                  My fourth semester project and first VR related project was BatlBoss aimed for Oculus Rift. It used SteamVR libraries and was created in Unity. In this project, the user could attack the boss by lighting him on fire, whacking him with a sword, or shooting arrows from a distance. 
+                                  <br/>Click <a href="https://github.com/Avalin/unity_batlboss.git">here</a> to check out the project.
+                                </p>
                                 <button class="btn btn-primary" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
                                     Close Window
@@ -829,7 +832,9 @@
                               <!-- Portfolio Modal - Image-->
                               <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-7.png" alt="" />
                               <!-- Portfolio Modal - Text-->
-                              <p class="mb-5">Elective                    
+                              <p class="mb-5">
+                                During my final semester as a software engineer, I had to create two VR projects with a-frame, and a video-showcase all integrated in one website project.  
+                                The result was a small Pokémon inspired clone in which the user can interact with characters and catch Pokémon, and a Nightmare Before Christmas gaze experience.                  
                                 <br/>Click <a href="https://github.com/Avalin/aframe_pokemon_nbfc_examples">here</a> to check out the project.
                               </p>
                               <button class="btn btn-primary" data-dismiss="modal">
