--- a/views/index-dk.html
+++ b/views/index-dk.html
@@ -103,8 +103,8 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="icofont-document-folder"></i>
-                    <span data-toggle="counter-up">15</span>
-                    <p><strong>Udviklingsprojekter</strong> på GitHub med igangværende og færdige projekter, hvoraf <strong>9</strong> af dem er offentligt tilgængelige.</p>
+                    <span data-toggle="counter-up">14</span>
+                    <p><strong>Udviklingsprojekter</strong> på GitHub med igangværende og færdige projekter, hvoraf <strong>8</strong> af dem er offentligt tilgængelige.</p>
                   </div>
                 </div>
 
@@ -653,10 +653,10 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-1.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Arachnophilia VR is a Unity project and is meant as a tool to alleviate arachnophobia and help the user to combat their fear with lifelike spider-interactions. The user controls how many spiders will be spawned and can squash, lift, throw the spiders to create an immersive and realistic experience.</p>
+                                  <p class="mb-5">Arachnophilia VR er et Unity projekt og er et værktøj ment til at lindre araknofobi og hjælpe brugeren til at bekæmpe deres frygt med overbevisende edderkoppeinteraktioner. Brugeren er i kontrol over hvor mange edderkopper der bliver skabt, dræbt, kastet, løftet og mere for at skabe en realistisk og gennemgribende oplevelse.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
-                                      Close Window
+                                      Luk vinduet
                                   </button>
                               </div>
                           </div>
@@ -680,12 +680,12 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-2.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">2D Snake was made as part of an assignment during my Software Engineering bachelor.
-                                    The purpose was for us to get comfortable with writing and using an update-loop and write the methods from scratch that usually game engines does for us. It is written in pure C# using Windows Forms to render the graphics. 
-                                    <br/>Click <a href="https://github.com/Avalin/wf_snake">here</a> to check out the project.</p>
+                                  <p class="mb-5">2D Snake var lavet som del af en opgave igennem min bachelor som Software Ingeniør.
+                                    Idéen var at vi skulle blive komfortable med at skrive avancerede spil algoritmer udenfor en Game Engine, såsom at takle emner som kollisionsdetektering, "update"-loops og andre metoder som en game engine normalt takler for en. Projektet er skrevet i C# og bruger Windows Forms til at rendere grafik. 
+                                    <br/><br/>Klik <a href="https://github.com/Avalin/wf_snake">her</a> for at se projektet på GitHub.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
-                                      Close Window
+                                      Luk vinduet
                                   </button>
                               </div>
                           </div>
@@ -709,10 +709,14 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-3.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">Click <a href="https://github.com/Avalin/unity_t_shirt_creator_kit">here</a> to check out the project.</p>
+                                  <p class="mb-5">
+                                    Dette projekt blev lavet i forbindelse med undervisning på VIA hvor vi havde fokus på at skrive shaders og UV-mapping på mit sjette semester. 
+                                    I projektet kan man vælge forskellige t-shirt modeller, vælge alle mulige forskellige farver og typer and insert a logo på det. 
+                                    De forskellige valgmuligheder har forskellige animationer tilknyttet som bl.a. bruger sinus og cosinus kurver.
+                                    <br/><br/>Klik <a href="https://github.com/Avalin/unity_t_shirt_creator_kit">her</a> for at se projektet på GitHub.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
-                                      Close Window
+                                      Luk vinduet
                                   </button>
                               </div>
                           </div>
@@ -737,10 +741,14 @@
                                   <!-- Portfolio Modal - Image-->
                                   <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-4.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
-                                  <p class="mb-5">I have participated in the creation of Slay The Dragon together with The Animation Workshop in Viborg. My primary role was to reorganize the code to a feasible and future-minded structure but also to create some minor new tweaks and features for the gameplay.</p>
+                                  <p class="mb-5">
+                                    Jeg har deltaget i skabelsen af Slay The Dragon! sammen med The Animation Workshop i Viborg. 
+                                    Min primære rolle var at omstrukturere koden til at være fleksibel og letlæselig for fremtiden, men jeg var også med til at skabe nogle små nye funktioner til spillet.
+                                    <br/><br/>Klik <a href="https://store.steampowered.com/app/1463890/Slay_the_Dragon/">her</a> for at se spillet på Steam.
+                                  </p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
-                                      Close Window
+                                      Luk vinduet
                                   </button>
                               </div>
                           </div>
@@ -764,13 +772,14 @@
                                 <!-- Portfolio Modal - Image-->
                                 <img class="img-fluid mb-5" src="../public/img/portfolio/portfolio-5.png" alt="" />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-5">A small Unity 2D game project, was an assignment I got for a job interview. 
-                                  <br/>The bricks uses programmed animations, and the levels are created with .CSV files. 
-                                  <br/>Click <a href="https://github.com/Avalin/unity_atari_breakout">here</a> to check out the project.
+                                <p class="mb-5">Et lille Unity 2D spilprojekt, som var en opgave jeg fik til en jobsamtale. 
+                                  <br/>Klodserne animeres lineær interpolation fra et script, og de forskellige niveauer er skabt ud fra .CSV filer.
+                                  <br/>Både grafikken og koden er skræddersyet af mig, lydene er hentet fra freesound.org.
+                                  <br/><br/>Klik <a href="https://github.com/Avalin/unity_atari_breakout">her</a> for at tjekke projektet ud.
                                 </p>
                                 <button class="btn btn-primary" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
-                                    Close Window
+                                    Luk vinduet
                                 </button>
                             </div>
                         </div>
@@ -794,10 +803,14 @@
                                 <!-- Portfolio Modal - Image-->
                                 <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-6.png" alt="" />
                                 <!-- Portfolio Modal - Text-->
-                                <p class="mb-5">Det første VR projekt jeg har lavet var i fjerde semester og var lavet med henblik på den dengang relativt nye Oculus Rift og med SteamVR biblioteket til Unity. I dette projekt kunne brugeren angribe bossen ved at slå ham med et sværd, sætte ild til ham med en fakkel eller skyde pile efter ham med en bue.</p>
+                                <p class="mb-5">Det første VR projekt jeg har lavet var i fjerde semester og var lavet med henblik på den dengang relativt nye Oculus Rift og med SteamVR biblioteket til Unity. 
+                                  I dette projekt kunne brugeren angribe bossen ved at slå ham med et sværd, sætte ild til ham med en fakkel eller skyde pile efter ham med en bue.
+                                  Projektet er lavet med en teammate og vi fik karakteren 12 for vores arbejde. 
+                                  <br/><br/>Klik <a href="https://github.com/Avalin/unity_batlboss">her</a> for at se projektet på GitHub.
+                                </p>
                                 <button class="btn btn-primary" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
-                                    Close Window
+                                    Luk vinduet
                                 </button>
                             </div>
                         </div>
@@ -821,12 +834,16 @@
                               <!-- Portfolio Modal - Image-->
                               <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-7.png" alt="" />
                               <!-- Portfolio Modal - Text-->
-                              <p class="mb-5">Elective                    
-                                <br/>Click <a href="https://github.com/Avalin/aframe_pokemon_nbfc_examples">here</a> to check out the project.
+                              <p class="mb-5"> 
+                                Som en del af mit studie på VIA University College har jeg lavet dette projekt i forbindelse med mit valgfag, WebVR.
+                                Det er delt op i to projekter. Det initielle projekt udnytter "gaze" interaktion, hvor man bruger øjnene til at interagere med forskellige karakterer fra The Nightmare Before Christmas ved brug af et HMD til VR. Det er lavet til at køre i browseren, så man kan bruge alle typer VR udstyr og man kan også køre det lidt begrænset uden VR udstyr på en PC.
+                                I den anden del af projektet kan man teleportere sig rundt, kaste pokéballs, tale med Nintendo karakterer, fange pokémon, tænde og slukke for lys og engagere sig i en interaktivt verden hvor himlen ændrer sig stille og roligt fra dag til nat.
+                                <br/>Projektet er lavet solo, og har fået karakteren 12.               
+                                <br/><br/>Klik <a href="https://github.com/Avalin/aframe_pokemon_nbfc_examples">her</a> for at se projektet på GitHub.
                               </p>
                               <button class="btn btn-primary" data-dismiss="modal">
                                   <i class="fas fa-times fa-fw"></i>
-                                  Close Window
+                                  Luk vinduet
                               </button>
                           </div>
                       </div>
@@ -850,13 +867,14 @@
                               <!-- Portfolio Modal - Image-->
                               <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-8-da.png" alt="" />
                               <!-- Portfolio Modal - Text-->
-                              <p class="mb-5">I have created an automatic rostering tool of employees for Smartplan using Drools Rule Engine (OptaPlanner) and Java.
-                                              The project was written using IntelliJ and Eclipse and is currently in production.                    
-                                <br/>Click <a href="https://trysmartplan.com/features-in-smartplan/">here</a> to learn more about the project.
+                              <p class="mb-5">
+                                Jeg har lavet et værktøj som laver automatisk vagtplanlægning for Smartplan ved hjælp af Drools Rule Engine (OptaPlanner) og Java.
+                                Projektet er skrevet med brug af IntelliJ samt Eclipse og er et færdigt projekt som lige nu i produktion.                    
+                              <br/><br/>Klik <a href="https://trysmartplan.com/features-in-smartplan/">her</a> for at læse mere om projektet.
                               </p>
                               <button class="btn btn-primary" data-dismiss="modal">
                                   <i class="fas fa-times fa-fw"></i>
-                                  Close Window
+                                  Luk vinduet
                               </button>
                           </div>
                       </div>
@@ -881,13 +899,13 @@
                               <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-9.png" alt="" />
                               <!-- Portfolio Modal - Text-->
                               <p class="mb-5">
-                                As part of my Computer Science degree, in order to familiarize myself with Javascript I have created a pink yatzy game. 
-                                Visualized with HTML. It was created in 2016 and I had yet to learn about responsive layouts.                  
-                                <br/>Click <a href="https://github.com/Avalin/js_yatzy">here</a> to check out the project.
+                                Som en del af min datamatiker, har jeg for at gøre mig selv bekendt med Javascript, skabt et pink Yatzy spil. 
+                                Det er visualiseret ved hjælp af HTML og er lavet tilbage i 2016 hvor jeg endnu ikke havde lært om responsive layouts.                  
+                              <br/><br/>Klik <a href="https://github.com/Avalin/js_yatzy">her</a> for at se projektet på GitHub.
                               </p>
                               <button class="btn btn-primary" data-dismiss="modal">
                                   <i class="fas fa-times fa-fw"></i>
-                                  Close Window
+                                  Luk vinduet
                               </button>
                           </div>
                       </div>
@@ -900,14 +918,14 @@
     
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Astrid Avalin Sørensen 2020</span></strong>. All Rights Reserved.
+        &copy; Copyright <strong><span>Astrid Avalin Sørensen 2020-2021</span></strong>. All Rights Reserved.
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
         <!-- You can delete the links only if you purchased the pro version. -->
         <!-- Licensing information: https://bootstrapmade.com/license/ -->
         <!-- Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/free-html-bootstrap-template-lonely/ -->
-        Designed with <a href="https://bootstrapmade.com/">BootstrapMade</a>
+        Designet med <a href="https://bootstrapmade.com/">BootstrapMade</a>
       </div>
     </div>
   </footer><!-- End  Footer -->
