--- a/views/index.html
+++ b/views/index.html
@@ -102,8 +102,8 @@
                 <div class="col-md-6 d-md-flex align-items-md-stretch">
                   <div class="count-box">
                     <i class="icofont-document-folder"></i>
-                    <span data-toggle="counter-up">15</span>
-                    <p><strong>Repositories</strong> on GitHub with ongoing and finished projects, with <strong>9</strong> of them being public.</p>
+                    <span data-toggle="counter-up">14</span>
+                    <p><strong>Repositories</strong> on GitHub with ongoing and finished projects, with <strong>8</strong> of them being public.</p>
                   </div>
                 </div>
 
@@ -222,6 +222,12 @@
               </div>
             </div>
 
+            <div class="progress">
+              <span class="skill">Unity <i class="val">87%</i></span>
+              <div class="progress-bar-wrap">
+                <div class="progress-bar" role="progressbar" aria-valuenow="87" aria-valuemin="0" aria-valuemax="100"></div>
+              </div>
+            </div>
 
           </div>
 
@@ -247,6 +253,7 @@
                 <div class="progress-bar" role="progressbar" aria-valuenow="45" aria-valuemin="0" aria-valuemax="100"></div>
               </div>
             </div>
+            
 
           </div>
 
@@ -472,7 +479,7 @@
             <div class="portfolio-wrap rounded" data-toggle="modal" data-target="#portfolioModal6">
               <img src="../public/img/portfolio/portfolio-6.png" class="img-fluid rounded" alt="">
               <div class="portfolio-info">
-                <h4>BatlBoss VR</h4>
+                <h4>BattleBoss VR</h4>
                 <p>Fourth semester VR project made for Oculus Rift</p>
               </div>
             </div>
@@ -682,7 +689,7 @@
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">2D Snake was made as part of an assignment during my Software Engineering bachelor.
                                     The purpose was for us to get comfortable with writing and using an update-loop and write the methods from scratch that usually game engines does for us. It is written in pure C# using Windows Forms to render the graphics. 
-                                    <br/>Click <a href="https://github.com/Avalin/wf_snake">here</a> to check out the project.</p>
+                                    <br/><br/>Click <a href="https://github.com/Avalin/wf_snake">here</a> to check out the project.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
@@ -712,8 +719,8 @@
                                   <p class="mb-5">
                                     This project was made as a part of a lesson about shaders and UV-mapping on my sixth semester. 
                                     You can select a t-shirt mesh, and give it any color and insert a logo on it. 
-                                    The different selectors will have animate separate parts of the shirt with Sine/Cos waves.
-                                    <br/>Click <a href="https://github.com/Avalin/unity_t_shirt_creator_kit">here</a> to check out the project.</p>
+                                    The different selectors will animate separate parts of the shirt with sine and/or cos waves.
+                                    <br/><br/>Click <a href="https://github.com/Avalin/unity_t_shirt_creator_kit">here</a> to check out the project.</p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
                                       Close Window
@@ -742,8 +749,9 @@
                                   <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-4.png" alt="" />
                                   <!-- Portfolio Modal - Text-->
                                   <p class="mb-5">
-                                    I have participated in the creation of Slay The Dragon together with The Animation Workshop in Viborg. My primary role was to reorganize the code to a feasible and future-minded structure but also to create some minor new tweaks and features for the gameplay.
-                                    <br/>Click <a href="https://www.instagram.com/slaythedragon_game/">here</a> to learn more about the project.
+                                    I have participated in the creation of Slay The Dragon! together with The Animation Workshop in Viborg. 
+                                    My primary role was to reorganize the code to a feasible and future-minded structure but also to create some minor new tweaks and features for the gameplay.
+                                    <br/><br/>Click <a href="https://store.steampowered.com/app/1463890/Slay_the_Dragon/">here</a> to check out the game.
                                   </p>
                                   <button class="btn btn-primary" data-dismiss="modal">
                                       <i class="fas fa-times fa-fw"></i>
@@ -772,9 +780,8 @@
                                 <img class="img-fluid mb-5" src="../public/img/portfolio/portfolio-5.png" alt="" />
                                 <!-- Portfolio Modal - Text-->
                                 <p class="mb-5">A small Unity 2D game project, was an assignment I got for a job interview. 
-                                  <br/>The bricks uses programmed animations, and the levels are created with .CSV files.
-                                  <br/>Both the graphics and the code is handmade by me.
-                                  <br/>Click <a href="https://github.com/Avalin/unity_atari_breakout">here</a> to check out the project.
+                                  <br/>The bricks uses programmed animations, and the levels are created with .CSV files. 
+                                  <br/><br/>Click <a href="https://github.com/Avalin/unity_atari_breakout">here</a> to check out the project.
                                 </p>
                                 <button class="btn btn-primary" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
@@ -797,14 +804,16 @@
                         <div class="row justify-content-center">
                             <div class="col-lg-8">
                                 <!-- Portfolio Modal - Title-->
-                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">BatlBoss for VR</h2><br/>
+                                <h2 class="portfolio-modal-title text-secondary text-uppercase mb-0" id="portfolioModal6Label">BattleBoss for VR</h2><br/>
 
                                 <!-- Portfolio Modal - Image-->
                                 <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-6.png" alt="" />
                                 <!-- Portfolio Modal - Text-->
                                 <p class="mb-5">
-                                  My fourth semester project and first VR related project was BatlBoss aimed for Oculus Rift. It used SteamVR libraries and was created in Unity. In this project, the user could attack the boss by lighting him on fire, whacking him with a sword, or shooting arrows from a distance. 
-                                  <br/>Click <a href="https://github.com/Avalin/unity_batlboss.git">here</a> to check out the project.
+                                  My fourth semester project and first VR related project was BatlBoss aimed for Oculus Rift. It used SteamVR libraries and was created in Unity. 
+                                  In this project, the user could attack the boss by lighting him on fire, whacking him with a sword, or shooting arrows from a distance.  
+                                  <br/>This project gained both my teammate and I the top grade on the danish grading system.                          
+                                  <br/><br/>Click <a href="https://github.com/Avalin/unity_batlboss">here</a> to check out the project.
                                 </p>
                                 <button class="btn btn-primary" data-dismiss="modal">
                                     <i class="fas fa-times fa-fw"></i>
@@ -832,10 +841,11 @@
                               <!-- Portfolio Modal - Image-->
                               <img class="img-fluid rounded mb-5" src="../public/img/portfolio/portfolio-7.png" alt="" />
                               <!-- Portfolio Modal - Text-->
-                              <p class="mb-5">
-                                During my final semester as a software engineer, I had to create two VR projects with a-frame, and a video-showcase all integrated in one website project.  
-                                The result was a small Pokémon inspired clone in which the user can interact with characters and catch Pokémon, and a Nightmare Before Christmas gaze experience.                  
-                                <br/>Click <a href="https://github.com/Avalin/aframe_pokemon_nbfc_examples">here</a> to check out the project.
+                              <p class="mb-5">As part of my studies at VIA University College, I made this project for an elective called WebVR. 
+                                It is separated into two different projects. In the initial project you can gaze at different characters from The Nightmare Before Christmas and interact with them using a HMD for VR. It is made for a browser, so you can use any VR device or even just your PC without a VR device.
+                                In the second part of the project the user can move around, throw pokéballs, talk to Nintendo characters, catch pokémon, turn on/off lights and engage in an interactive setting where the sky changes from day to night.
+                                The project is made solo and received top grade on the danish grading system.                    
+                                <br/><br/>Click <a href="https://github.com/Avalin/aframe_pokemon_nbfc_examples">here</a> to check out the project.
                               </p>
                               <button class="btn btn-primary" data-dismiss="modal">
                                   <i class="fas fa-times fa-fw"></i>
@@ -865,7 +875,7 @@
                               <!-- Portfolio Modal - Text-->
                               <p class="mb-5">I have created the backend for an automatic rostering tool during my time at Smartplan, using Drools Rule Engine (OptaPlanner) and Java.
                                               The project was written using a mix of IntelliJ and Eclipse and is currently in production.                    
-                                <br/>Click <a href="https://trysmartplan.com/features-in-smartplan/">here</a> to learn more about the project.
+                              <br/><br/>Click <a href="https://trysmartplan.com/features-in-smartplan/">here</a> to learn more about the project.
                               </p>
                               <button class="btn btn-primary" data-dismiss="modal">
                                   <i class="fas fa-times fa-fw"></i>
@@ -896,7 +906,7 @@
                               <p class="mb-5">
                                 As part of my Computer Science degree, in order to familiarize myself with Javascript I have created a pink yatzy game. 
                                 Visualized with HTML. It was created in 2016 and I had yet to learn about responsive layouts.                  
-                                <br/>Click <a href="https://github.com/Avalin/js_yatzy">here</a> to check out the project.
+                                <br/><br/>Click <a href="https://github.com/Avalin/js_yatzy">here</a> to check out the project.
                               </p>
                               <button class="btn btn-primary" data-dismiss="modal">
                                   <i class="fas fa-times fa-fw"></i>
